@startuml orm_classes
' run:
' cd docs/diagrams/src
' plantuml -tpng -Ddpi=300 -o ../export orm_classes.puml

' --- Common style (keep identical across all PlantUML diagrams) ---
hide circle
skinparam Shadowing false
skinparam RoundCorner 8
skinparam ClassAttributeIconSize 0
skinparam DefaultFontName Arial
skinparam DefaultFontSize 14
skinparam ArrowColor #333333
skinparam LineColor #333333
skinparam PackageBorderColor #333333
skinparam PackageBackgroundColor #FFFFFF
skinparam ClassBorderColor #333333
skinparam ClassBackgroundColor #FFFFFF
skinparam NoteBackgroundColor #FFFFFF
skinparam NoteBorderColor #333333
skinparam BackgroundColor #FFFFFF

' --- Layout for A4 portrait readability ---
top to bottom direction
skinparam linetype ortho

package "Persistence (SQLAlchemy ORM) — Doctors" {
  class Doctor {
    +id: int
    +first_name: str
    +last_name: str
    +role: DoctorRole
    +is_active: bool
    +is_head: bool
    +email: Optional[str]
  }
}

package "Persistence (SQLAlchemy ORM) — Preferences" {
  class PreferenceWorking {
    +id: int
    +doctor_id: int
    +year: int
    +month: int
    +lock_version: int
    +unavailable_onsite_days: list[int]
    +unavailable_oncall_days: list[int]
  }

  class PreferenceVersion {
    +id: int
    +doctor_id: int
    +year: int
    +month: int
    +kind: str
    +payload: dict
    +created_at: datetime
  }

  class PreferencePointer {
    +id: int
    +doctor_id: int
    +year: int
    +month: int
    +current_version_id: Optional[int]
    +submitted_at: Optional[datetime]
  }
}

package "Persistence (SQLAlchemy ORM) — Schedules" {
  class ScheduleWorking {
    +year: int
    +month: int
    +payload: dict
    +lock_version: int
    +updated_at: datetime
    +updated_by_user_id: Optional[int]
  }

  class ScheduleVersion {
    +id: int
    +year: int
    +month: int
    +kind: str
    +payload: dict
    +created_at: datetime
    +created_by_user_id: Optional[int]
  }

  class SchedulePointer {
    +year: int
    +month: int
    +current_draft_version_id: Optional[int]
    +current_published_version_id: Optional[int]
    +updated_at: datetime
  }

  class ScheduleDiagnostics {
    +id: int
    +version_id: int
    +quality: dict
    +computed_at: datetime
  }
}

' --- Key links (FK intent) ---
PreferenceWorking --> Doctor : doctor_id
PreferenceVersion --> Doctor : doctor_id
PreferencePointer --> Doctor : doctor_id
PreferencePointer --> PreferenceVersion : current_version_id

SchedulePointer --> ScheduleVersion : current_draft_version_id
SchedulePointer --> ScheduleVersion : current_published_version_id
ScheduleDiagnostics --> ScheduleVersion : version_id

' --- “Workflow meaning” links (service behavior, not FK) ---
ScheduleWorking ..> ScheduleVersion : "service: checkpoint/publish creates version"
SchedulePointer ..> ScheduleWorking : "service: revert/redo overwrites working"

@enduml
